--- a/01-vars.yml
+++ b/01-vars.yml
@@ -13,4 +13,5 @@
     - name: Print a variable
       ansible.builtin.debug:
         msg: "{{ URL }}"
-## Given the variable in double quotes, Good to give a variable in double quotes, Because it will fail in some scenarios if quotes are not provided
+## Given the variable in double quotes, Good to give a variable in double/single quotes, Because it will fail in some scenarios if quotes are not provided.
+# In the key: value, if the value is just variable or if the values starts with variable then it fail.
