--- a/01-vars.yml
+++ b/01-vars.yml
@@ -16,11 +16,17 @@
 ## Given the variable in double quotes, Good to give a variable in double/single quotes, Because it will fail in some scenarios if quotes are not provided.
 # In the key: value, if the value is just variable or if the values starts with variable then it fail.
 
-- name: Demo on vars
+- name: Demo on task level variable
   hosts: localhost
+  vars:
+    URL: play.example.com
   tasks:
-    - name: Print a variable
+    - name: Print task variable
       ansible.builtin.debug:
         msg: "{{ URL }}"
       vars:
-        URL: example.com
+        URL: task.example.com
+
+    - name: Print play variable
+      ansible.builtin.debug:
+        msg: "{{ URL }}"
