--- a/02-conditions.yml
+++ b/02-conditions.yml
@@ -4,7 +4,9 @@
     - name: Print Apple Price
       ansible.builtin.debug:
         msg: Apple Price is - 1$
+      when: fruit == "apple"
 
     - name: Print Orange price
       ansible.builtin.debug:
         msg: Orange price is - 2$
+      when: fruit == "orange"
