--- a/03-mem-cal.yml
+++ b/03-mem-cal.yml
@@ -6,4 +6,4 @@
       register: free
     - name: Print free variable
       ansible.builtin.debug:
-        msg: "{{free.stdout}}"
+        msg: "{{free.stdout | list}}"
