--- a/03-mem-cal.yml
+++ b/03-mem-cal.yml
@@ -4,6 +4,12 @@
     - name: Get Memory
       ansible.builtin.shell: free | grep Mem | xargs
       register: free
+
+    - name: Set a fact
+      ansible.builtin.set_fact:
+        FREE: "{{ free.stdout | split('') }}"
+
     - name: Print free variable
-      ansible.builtin.debug:
-        msg: "{{free.stdout | split(' ') }}"
+      ansible.builtin.set_fact:
+        total: "{{ FREE[1] }}"
+        free: "{{ FREE[3] }}"
