--- a/03-mem-cal.yml
+++ b/03-mem-cal.yml
@@ -18,3 +18,18 @@
     - name: Print free output
       ansible.builtin.debug:
         msg: "{{ used_mem }}"
+
+    - name: Memory Good
+      ansible.builtin.debug:
+        msg: Memory Good
+      when: used_mem < 50
+
+    - name: Memory Orange
+      ansible.builtin.debug:
+        msg: Memory Good
+      when: used_mem > 50 and used_mem < 70
+
+    - name: Memory Red
+      ansible.builtin.debug:
+         msg: Memory Red
+      when: used_mem > 70
